feat: Add support for CLUSTER and REPLICATED client