@@ -6,7 +6,6 @@ import static java.util.Collections.unmodifiableList;
 import io.vertx.codegen.annotations.DataObject;
 import io.vertx.codegen.annotations.GenIgnore;
 import io.vertx.codegen.json.annotations.JsonGen;
-import io.vertx.codegen.annotations.Nullable;
 import io.vertx.core.json.JsonObject;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -30,6 +29,15 @@ public class RedisConfig {
   /** Redis key namespace. */
   private String keyNamespace;
 
+  /** Redis connection username. */
+  private String username;
+
+  /** Redis connection password, */
+  private String password;
+
+  /** Redis response timeout. */
+  private Integer responseTimeout;
+
   /** Default Redis URL. */
   private final String defaultEndpoint;
 
@@ -42,17 +50,12 @@ public class RedisConfig {
   /** Lock configuration. */
   private final List<LockConfig> locks = new ArrayList<>();
 
-  /** Use connection listener. */
-  private boolean useConnectionListener;
-
-  @Nullable private String password = null;
-  @Nullable private String username = null;
-
-
   /** Create the default configuration from existing environment variables. */
   public RedisConfig() {
     defaultEndpoint = RedisConfigProps.getDefaultEndpoint().toASCIIString();
     keyNamespace = RedisConfigProps.getPropertyValue("redis.key.namespace");
+    username = RedisConfigProps.getPropertyValue("redis.connection.username", null);
+    password = RedisConfigProps.getPropertyValue("redis.connection.password", null);
   }
 
   /**
@@ -64,8 +67,9 @@ public class RedisConfig {
     defaultEndpoint = other.defaultEndpoint;
     type = other.type;
     keyNamespace = other.keyNamespace;
-    password = other.password;
     username = other.username;
+    password = other.password;
+    responseTimeout = other.responseTimeout;
     endpoints = new ArrayList<>(other.endpoints);
     other.maps.stream().map(MapConfig::new).forEach(maps::add);
     other.locks.stream().map(LockConfig::new).forEach(locks::add);
@@ -102,42 +106,6 @@ public class RedisConfig {
   }
 
   /**
-   * Set the password
-   *
-   * @param password the password
-   * @return fluent self
-   */
-  public RedisConfig setPassword(String password) {
-    this.password = password;
-    return this;
-  }
-
-  /**
-   * @return the password
-   */
-  public String getPassword() {
-    return password == null ? "" : password;
-  }
-
-  /**
-   * Set the username
-   *
-   * @param username the username
-   * @return fluent self
-   */
-  public RedisConfig setUsername(String username) {
-    this.username = username;
-    return this;
-  }
-
-  /**
-   * @return the password
-   */
-  public String getUsername() {
-    return username == null ? "" : username;
-  }
-
-  /**
    * Set the client type.
    *
    * @param type the client type
@@ -155,6 +123,72 @@ public class RedisConfig {
    */
   public ClientType getClientType() {
     return type == null ? ClientType.STANDALONE : type;
+  }
+
+  /**
+   * Returns the username used when connecting to Redis.
+   *
+   * @return the username to use when connecting to Redis or <code>null</code> to not use a username
+   */
+  public String getUsername() {
+    return username;
+  }
+
+  /**
+   * Set the username to use when connecting to Redis.
+   *
+   * <p>Default value: <code>null</code>
+   *
+   * @param username the username to use
+   * @return fluent self
+   */
+  public RedisConfig setUsername(String username) {
+    this.username = username;
+    return this;
+  }
+
+  /**
+   * Returns the password used when connecting to Redis.
+   *
+   * @return the password to use when connecting to Redis or <code>null</code> to not use a password
+   */
+  public String getPassword() {
+    return password;
+  }
+
+  /**
+   * Set the password to use when connecting to Redis.
+   *
+   * <p>Default value: <code>null</code>
+   *
+   * @param password the password to use
+   * @return fluent self
+   */
+  public RedisConfig setPassword(String password) {
+    this.password = password;
+    return this;
+  }
+
+  /**
+   * Set the Redis server response timeout. Starts to countdown when Redis command has been
+   * successfully sent. If not set, a default value will be used.
+   *
+   * @param responseTimeout the response timeout in milliseconds
+   * @return fluent self
+   */
+  public RedisConfig setResponseTimeout(Integer responseTimeout) {
+    this.responseTimeout = responseTimeout;
+    return this;
+  }
+
+  /**
+   * Get the Redis server response timeout. Starts to countdown when Redis command has been
+   * successfully sent.
+   *
+   * @return the response timeout to use or <code>null</code> to use a default response timeout
+   */
+  public Integer getResponseTimeout() {
+    return responseTimeout;
   }
 
   /**
@@ -185,7 +219,7 @@ public class RedisConfig {
       return singletonList(defaultEndpoint);
     }
     if (type == ClientType.STANDALONE) {
-      return singletonList(endpoints.get(0));
+      return singletonList(endpoints.getFirst());
     }
     return unmodifiableList(endpoints);
   }
@@ -272,23 +306,35 @@ public class RedisConfig {
 
   @Override
   public boolean equals(Object o) {
-    if (this == o) return true;
-    if (o == null || getClass() != o.getClass()) return false;
-    RedisConfig that = (RedisConfig) o;
+    if (this == o) {
+      return true;
+    }
+    if (!(o instanceof RedisConfig that)) {
+      return false;
+    }
     return type == that.type
         && Objects.equals(keyNamespace, that.keyNamespace)
-        && Objects.equals(password, that.password)
         && Objects.equals(username, that.username)
-        && defaultEndpoint.equals(that.defaultEndpoint)
-        && endpoints.equals(that.endpoints)
-        && maps.equals(that.maps)
-        && locks.equals(that.locks);
+        && Objects.equals(password, that.password)
+        && Objects.equals(responseTimeout, that.responseTimeout)
+        && Objects.equals(defaultEndpoint, that.defaultEndpoint)
+        && Objects.equals(endpoints, that.endpoints)
+        && Objects.equals(maps, that.maps)
+        && Objects.equals(locks, that.locks);
   }
 
   @Override
   public int hashCode() {
     return Objects.hash(
-        type, keyNamespace, username, password, defaultEndpoint, endpoints, useConnectionListener, maps, locks);
+        type,
+        keyNamespace,
+        username,
+        password,
+        responseTimeout,
+        defaultEndpoint,
+        endpoints,
+        maps,
+        locks);
   }
 
   @Override
